[tool.poetry]
name = "bpm-sorter"
version = "0.1.0"
description = "Sort Spotify playlists by their BPM"
authors = ["Tim Jentzsch <bpm_sorter.projects@timjen.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
